# figueroa

./: .gitignore  CMakeLists.txt
include/: linalg.hpp
src-test/: CMakeLists.txt  test_linalg.cpp
toys/: CMakeLists.txt
toys/pthreads/: CMakeLists.txt
toys/pthreads/ex001/: CMakeLists.txt  main.cpp
